# se-toolkit-hackathon

./: .gitignore  LICENSE  README.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  Dockerfile  pyproject.toml  seed.py
backend/app/: main.py
backend/app/agents/: setlist_agent.py
backend/app/api/: ai.py  auth.py  playlists.py  setlists.py  tracks.py
backend/app/core/: __init__.py  auth.py  config.py  database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.jsx  LoginPage.jsx  RegisterPage.jsx  index.css
frontend/src/pages/: AIGeneratorPage.jsx  PlaylistsPage.jsx  SetlistsPage.jsx  TracksPage.jsx
frontend/src/services/: api.js
